@@ -15,14 +15,14 @@
 	<version>1.4-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
  <build>
-  <plugins>
+<!--  <plugins>
      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
             <forkMode>pertest</forkMode> 
         </configuration>
       </plugin>
-     </plugins>
+     </plugins> -->
   </build>
 	<dependencies>
 		<dependency>
